--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "A photo viewer using different APIs",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thomas Dvornik",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.10.6"
+  }
 }
