--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Thomas Dvornik",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.10.6"
+    "express": "^4.10.6",
+    "url": "^0.10.1"
   }
 }
